--- a/rbe/src/java/com/davidecavestro/rbe/gui/MainWindow.form
+++ b/rbe/src/java/com/davidecavestro/rbe/gui/MainWindow.form
@@ -540,6 +540,7 @@
   </Events>
   <AuxValues>
     <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_layoutCodeTarget" type="java.lang.Integer" value="2"/>
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
@@ -652,6 +653,11 @@
           </SubComponents>
         </Container>
         <Container class="javax.swing.JTabbedPane" name="jTabbedPane1">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Dialog" size="12" style="0"/>
+            </Property>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
               <BorderConstraints direction="Center"/>
@@ -669,8 +675,10 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="tab1">
-                    <Property name="tabTitle" type="java.lang.String" value="tab1"/>
+                  <JTabbedPaneConstraints tabName="Classic">
+                    <Property name="tabTitle" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+                      <ResourceString bundle="com/davidecavestro/rbe/gui/res.properties" key="ViewSelectionChoice.ChoiceValue.ClassicViewChoice" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameDots}&quot;).getString(&quot;{key}&quot;)"/>
+                    </Property>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
@@ -821,8 +829,8 @@
                                     <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="valuesTableMousePressed"/>
                                   </Events>
                                   <AuxValues>
-                                    <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JXTable (this._localizationTableModel);"/>
-                                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="&#xa;valuesTable.setDefaultRenderer (Object.class, new ValuesTableCellRenderer ());&#xa;&#xa;&#xa;valuesTable.setDefaultEditor (String.class, new ValueCellEditor ());&#xa;&#xa;/*&#xa; * editor (shortcut per cancellazione&#xa; */&#xa;valuesTable.addKeyListener (new KeyAdapter (){&#xa;&#x9; public void keyPressed(KeyEvent e) {&#xa;&#x9;&#x9; if (e.isControlDown ()){&#xa;&#x9;&#x9;&#x9; if (e.getKeyCode ()==KeyEvent.VK_DELETE){&#xa;&#x9;&#x9;&#x9;&#x9; int rowIdx = valuesTable.getSelectedRow ();&#xa;&#x9;&#x9;&#x9;&#x9; int colIdx = valuesTable.getSelectedColumn ();&#xa;&#x9;&#x9;&#x9;&#x9; if (colIdx&gt;0 &amp;&amp; rowIdx&gt;=0){&#xa;&#x9;&#x9;&#x9;&#x9;&#x9; //barbatrucco per evitare editazione spuria&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;//valuesTable.editCellAt(rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;valuesTable.setValueAt (null, rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;e.consume ();&#xa;&#x9;&#x9;&#x9;&#x9; }&#xa;&#x9;&#x9;&#x9; } else if (e.getKeyCode ()==KeyEvent.VK_SPACE){&#xa;&#x9;&#x9;&#x9;&#x9; int rowIdx = valuesTable.getSelectedRow ();&#xa;&#x9;&#x9;&#x9;&#x9; int colIdx = valuesTable.getSelectedColumn ();&#xa;&#x9;&#x9;&#x9;&#x9; if (colIdx&gt;0 &amp;&amp; rowIdx&gt;=0){&#xa;&#x9;&#x9;&#x9;&#x9;&#x9; //barbatrucco per evitare editazione spuria&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;//valuesTable.editCellAt(rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;valuesTable.setValueAt (&quot;&quot;, rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;e.consume ();&#xa;&#x9;&#x9;&#x9;&#x9; }&#xa;&#x9;&#x9;&#x9; }&#xa;&#x9;&#x9; }&#xa;&#x9; }&#xa;});&#xa;&#xa;javax.help.CSH.setHelpIDString (valuesTable, _context.getHelpManager ().getResolver ().resolveHelpID (HelpResources.VALUES_TABLE ));"/>
+                                    <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JXTable (this._localizationTableModel){&#xa;&#x9;@Override&#xa;    protected void resetDefaultTableCellRendererColors(Component renderer, int row, int column) {&#xa;&#x9;&#x9;/*&#xa;&#x9;&#x9; * @workaround swingx&#xa;&#x9;&#x9; * non fa nulla, altrimenti viene vanificato il codice deltablecellrenderer&quot;&#xa;&#x9;&#x9; */&#xa;&#x9;}&#xa;&#xa;};"/>
+                                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="&#xa;valuesTable.setDefaultRenderer (Object.class, new ValuesTableCellRenderer ());&#xa;valuesTable.setDefaultRenderer (String.class, new ValuesTableCellRenderer ());&#xa;&#xa;&#xa;valuesTable.setDefaultEditor (String.class, new ValueCellEditor ());&#xa;&#xa;/*&#xa; * editor (shortcut per cancellazione&#xa; */&#xa;valuesTable.addKeyListener (new KeyAdapter (){&#xa;&#x9; public void keyPressed(KeyEvent e) {&#xa;&#x9;&#x9; if (e.isControlDown ()){&#xa;&#x9;&#x9;&#x9; if (e.getKeyCode ()==KeyEvent.VK_DELETE){&#xa;&#x9;&#x9;&#x9;&#x9; int rowIdx = valuesTable.getSelectedRow ();&#xa;&#x9;&#x9;&#x9;&#x9; int colIdx = valuesTable.getSelectedColumn ();&#xa;&#x9;&#x9;&#x9;&#x9; if (colIdx&gt;0 &amp;&amp; rowIdx&gt;=0){&#xa;&#x9;&#x9;&#x9;&#x9;&#x9; //barbatrucco per evitare editazione spuria&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;//valuesTable.editCellAt(rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;valuesTable.setValueAt (null, rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;e.consume ();&#xa;&#x9;&#x9;&#x9;&#x9; }&#xa;&#x9;&#x9;&#x9; } else if (e.getKeyCode ()==KeyEvent.VK_SPACE){&#xa;&#x9;&#x9;&#x9;&#x9; int rowIdx = valuesTable.getSelectedRow ();&#xa;&#x9;&#x9;&#x9;&#x9; int colIdx = valuesTable.getSelectedColumn ();&#xa;&#x9;&#x9;&#x9;&#x9; if (colIdx&gt;0 &amp;&amp; rowIdx&gt;=0){&#xa;&#x9;&#x9;&#x9;&#x9;&#x9; //barbatrucco per evitare editazione spuria&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;//valuesTable.editCellAt(rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;valuesTable.setValueAt (&quot;&quot;, rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;e.consume ();&#xa;&#x9;&#x9;&#x9;&#x9; }&#xa;&#x9;&#x9;&#x9; }&#xa;&#x9;&#x9; }&#xa;&#x9; }&#xa;});&#xa;&#xa;javax.help.CSH.setHelpIDString (valuesTable, _context.getHelpManager ().getResolver ().resolveHelpID (HelpResources.VALUES_TABLE ));"/>
                                   </AuxValues>
                                 </Component>
                               </SubComponents>
@@ -1069,8 +1077,10 @@
             <Container class="javax.swing.JPanel" name="jPanel1">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="tab2">
-                    <Property name="tabTitle" type="java.lang.String" value="tab2"/>
+                  <JTabbedPaneConstraints tabName="Keys tree">
+                    <Property name="tabTitle" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+                      <ResourceString bundle="com/davidecavestro/rbe/gui/res.properties" key="ViewSelectionChoice.ChoiceValue.KeysTreeChoice" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameDots}&quot;).getString(&quot;{key}&quot;)"/>
+                    </Property>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
@@ -1097,6 +1107,9 @@
                         <Property name="columnControlVisible" type="boolean" value="true"/>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Monospaced" size="12" style="0"/>
+                        </Property>
+                        <Property name="gridColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                          <Color blue="cc" green="cc" red="cc" type="rgb"/>
                         </Property>
                         <Property name="horizontalScrollEnabled" type="boolean" value="true"/>
                         <Property name="leafIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
